# brickgame

./: .gitignore  Makefile  README.md  README_RUS.md  check-list_RUS.yml
build_desktop/: CMakeCache.txt  Makefile  cmake_install.cmake
build_desktop/.qt/: QtDeploySupport.cmake
build_desktop/brickgame_desktop_autogen/: mocs_compilation.cpp
build_desktop/brickgame_desktop_autogen/EWIEGA46WW/: moc_view.cpp
build_desktop/brickgame_desktop_autogen/JNDJ5PUV5D/: moc_view_tab_switcher.cpp
build_desktop/brickgame_desktop_autogen/include/: ui_View.h
code-samples/gui/: game.js  readme.md  styles.css
code-samples/gui/src/: config.js  game-board.js
docker/: docker-compose.yaml
dvi-folder/: README.html  README.md  resize_images_script.js
materials/: brick-game-v1.0.md  library-specification_RUS.md  rest-api-specification.yaml  topics-list.md  topics-list_RUS.md
src/: Makefile  main.go
src/brick_game/common/: fsm_types.c  fsm_types.h
src/brick_game/common/api_client/: CMakeLists.txt  api_client.c  api_client.h  main.c
src/brick_game/common/block/: block.c  block.h
src/brick_game/common/board/: board.c  board.h
src/brick_game/common/cell/: cell.c  cell.h
src/brick_game/common/cjson/: cjson.c  cjson.h
src/brick_game/common/collisions_checker/: collisions_checker.c  collisions_checker.h
src/brick_game/common/common/: color_handler.c  color_handler.h  colors.h  defines.h
src/brick_game/common/game_status/: game_status.c  game_status.h
src/brick_game/common/parameters/: parameters.c  parameters.h
src/brick_game/common/player/: player.c  player.h
src/brick_game/common/player/player_board/: player_board.c  player_board.h
src/brick_game/common/records/: records.c  records.h
src/brick_game/common/retrieve_data/: CMakeLists.txt  retrieve_data.c  retrieve_data.h
src/brick_game/common/time_handler/: time_handler.c  time_handler.h
src/brick_game/go-server/: go.sum  main.go
src/brick_game/go-server/auxiliary/: aux.go
src/brick_game/go-server/carracing/: actions.go  fsm.go  game_loop.go  logic.go  printer.go  types.go
src/brick_game/go-server/controller/: controller.go
src/brick_game/go-server/handlers/: handlers.go
src/brick_game/go-server/types/: types.go
src/brick_game/race/: README.md  action_test.go  actions.go  game_logic.go  game_logic_test.go  go.mod  go.sum  main.go  print_track.go  print_track_test.go  sigact.go  sigact_test.go  summary_test.go  types.go  types_test.go
src/brick_game/race/legacy_include/: controller.go  controller.i  controller_wrap.cxx
src/brick_game/server/: go.mod  go.sum  main.go
src/brick_game/server/cmd/: init.go
src/brick_game/server/controller/: controller.go
src/brick_game/server/handlers/: handlers.go
src/brick_game/server/internal/cgotransform/: cgotransform.go
src/brick_game/server/internal/controller/: controller.go
src/brick_game/server/internal/dbhandler/: dbhandler.go
src/brick_game/server/types/: types.go
src/brick_game/snake/action/: action.cc  action.h
src/brick_game/snake/controller/: controller.cc  controller.h
src/brick_game/snake/model/: model.cc  model.h
src/brick_game/snake/move_snake/: move_snake.cc  move_snake.h
src/brick_game/tetris/backend/: backend.c  backend.h
src/brick_game/tetris/fsm/: callback.h  fsm.h  fsm_matrix.c
src/gui/cli/: CMakeLists.txt  car_racing_loop.c  cjson.c  cjson.h  draw_objects.c  draw_objects.h  frontend.c  frontend.h  get_player_name.c  get_player_name.h  main.c  retrieve_data.c  retrieve_data.h  snake_loop.c  test_main.c  tetris_loop.c
src/gui/desktop/view/: CMakeLists.txt  constants.h  main.cc  view.cc  view.h  view.ui
src/gui/desktop/view/grid_widget/: grid_widget.cc  grid_widget.h
src/gui/desktop/view/next_player_grid_widget/: next_player_grid_widget.cc  next_player_grid_widget.hpp
src/gui/desktop/view/style_handler/: style_handler.cc  style_handler.h
src/gui/desktop/view/view_tab_switcher/: view_tab_switcher.cc  view_tab_switcher.h
src/gui/web_gui/: .prettierrc  game.js  index.html  snake.html  styles.css  tetris.html
src/gui/web_gui/src/: config.js  game-board.js  side-panel.js  state-info.js  username-input.js
src/gui/web_gui/src/games/: game-utils.js  snake.js  tetris.js
src/gui/web_gui/static/: car-racing.html  snake.html  tetris.html
src/gui/web_gui/static/js/: config.js  game-board.js  next-player-board.js  side-panel.js  state-info.js
src/gui/web_gui/static/js/games/: car-racing.js  snake.js  tetris.js
src/gui/web_gui/static/styles/: styles.css
tests/: backend_test.h  block_test.h  board_test.h  collisions_checker_test.h  game_status_test.h  main_test.c  main_test.h  player_board_test.h  player_test.h  records_test.h
tests/snake/: CMakeLists.txt  model_tests.cc
tests/tetris/: CMakeLists.txt  backend_test.h  block_test.h  board_test.h  collisions_checker_test.h  game_status_test.h  manual_tests.c  player_board_test.h  player_test.h  records_test.h
